--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -13,40 +13,53 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
-
-      - name: Build Docker image
+      - name: Build backend Docker image
         run: docker build -t myapp-backend:latest ./backend
+
+      - name: Build frontend Docker image
         run: docker build -t myapp-frontend:latest ./frontend
 
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Push Docker image
+      - name: Push backend Docker image
         run: docker push myapp-backend:latest
+
+      - name: Push frontend Docker image
         run: docker push myapp-frontend:latest
 
-  deploy:
+      - name: Deploy to server
+        run: |
+          ssh user@yourserver.com <<EOF
+          docker pull myapp-backend:latest
+          docker pull myapp-frontend:latest
+          docker-compose -f /path/to/your/docker-compose.yml up -d
+          EOF
+      
+      - name: Notify Slack
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: '#deployments'
+          SLACK_COLOR: ${{ job.status == 'success' && 'good' || 'danger' }}
+          SLACK_MESSAGE: 'Deployment ${{ job.status }} for commit ${{ github.sha }}'
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+env:
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+
+
+  test:
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Deploy to server
-        run: |
-          ssh user@server "docker pull myapp-backend:latest && docker pull myapp-frontend:latest && docker-compose -f /path/to/docker-compose.yml up -d"
-
       - name: Run tests
         run: npm test
-        
