made changes to docker file to support vite

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
-# Stage 1: Build the React app
-FROM node:14 as build
+# Stage 1: Build the application
+FROM node:18 AS build
 
 # Set the working directory inside the container
 WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json
+# Copy package.json and package-lock.json (if available)
 COPY package*.json ./
 
 # Install dependencies
@@ -13,17 +13,14 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
-# Build the Vite app
+# Build the application
 RUN npm run build
 
-# Stage 2: Serve the React app using Nginx
+# Stage 2: Serve the application with Nginx
 FROM nginx:alpine
 
-# Copy the build output from the first stage to Nginx's HTML directory
+# Copy the built application from the build stage
 COPY --from=build /usr/src/app/dist /usr/share/nginx/html
 
-# Expose the port Nginx runs on
+# Expose port 80 to the outside world
 EXPOSE 80
-
-# Command to run Nginx
-CMD ["nginx", "-g", "daemon off;"]
