--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -26,10 +26,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push backend Docker image
-        run: docker push myapp-backend:latest
+        run: docker push "${{ secrets.DOCKER_USERNAME }}"/healthcare-backend:tagname
 
       - name: Push frontend Docker image
-        run: docker push myapp-frontend:latest
+        run: docker push "${{ secrets.DOCKER_USERNAME }}"/healthcare-frontend:tagname
 
       - name: Deploy to server
         run: |
