added frontend framework

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "db:create:test": "NODE_ENV=test npx sequelize-cli db:create",
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "prepare": "husky install",
+    "start": "nodemon -e js,ejs",
+    "start:prod": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0",
+    "pg": "^8.12.0",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "sinon": "^18.0.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1"
   }
 }
