--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,16 @@
   "main": "index.js",
   "scripts": {
     "db:create:test": "NODE_ENV=test npx sequelize-cli db:create",
-    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create && NODE_ENV=test npx sequelize-cli db:migrate",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "husky install",
-    "start": "nodemon -e js,ejs",
+    "start": "node index.js",
     "start:prod": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "express": "^4.19.2",
     "jest": "^29.7.0",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
@@ -23,6 +24,7 @@
     "supertest": "^7.0.0"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "husky": "^9.1.4"
   }
 }
