--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - DB_HOST=postgres
     depends_on:
       - postgres
+    command: [ "npm", "run", "test" ]
 
   frontend:
     build: ./frontend
