--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -42,7 +42,7 @@ jobs:
           ssh user@yourserver.com <<EOF
           docker pull myapp-backend:latest
           docker pull myapp-frontend:latest
-          docker-compose -f /path/to/your/docker-compose.yml up -d
+          docker-compose -f docker-compose.yml up -d
           EOF
 
       - name: Notify Slack
@@ -60,7 +60,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16' 
+
+      - name: Install dependencies
+        working-directory: ./backend
+        run: npm install
+
       - name: Run tests
+        working-directory: ./backend
         run: npm test
 
 env:
